--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "parcel build html/*.html",
     "check": "tsc",
     "doc": "typedoc --entryPointStrategy expand src/ types/",
-    "format": "prettier --write html/ src/ styles/ schemas/ tests/",
+    "format": "prettier --write html/ src/ styles/ tests/",
     "start": "parcel html/*.html",
     "test": "jest"
   },
