--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jest-environment-jsdom": "^29.6.2",
     "json-schema-to-typescript": "^13.0.1",
     "parcel": "^2.9.1",
+    "path-browserify": "^1.0.1",
     "prettier": "^3.0.0",
     "rimraf": "^5.0.1",
     "ts-jest": "^29.1.0",
@@ -31,6 +32,7 @@
   },
   "dependencies": {
     "@microsoft/fetch-event-source": "^2.0.1",
+    "@types/node": "^20.12.2",
     "ajv": "^8.12.0"
   }
 }
