added parallel running so you don't have to auto start backend

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "check": "tsc",
     "doc": "typedoc --entryPointStrategy expand src/ types/",
     "format": "prettier --write html/ src/ styles/ tests/",
-    "start": "parcel public/*.html --port 1234",
+    "serve-static": "serve -s public --cors",
+    "parcel-dev": "parcel public/*.html --port 1234",
+    "start": "npm-run-all --parallel serve-static parcel-dev",
     "test": "jest"
   },
   "author": "Stephen Xu",
@@ -21,6 +23,7 @@
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.6.2",
     "json-schema-to-typescript": "^13.0.1",
+    "npm-run-all": "^4.1.5",
     "parcel": "^2.9.1",
     "path-browserify": "^1.0.1",
     "prettier": "^3.0.0",
